fixed html meta tag for mobile-first

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,9 @@ html
     block head
       block title
         title= "RCS Photography"
-        
+      
+      meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
+      
       link(rel='shortcut icon', href='public/img/favicon.ico', type='image/x-icon')
       link(rel='icon'           href='public/img/favicon.ico', type='image/x-icon')
       
