--- a/public/css/album.css
+++ b/public/css/album.css
@@ -43,19 +43,13 @@
   background-size     : contain;
 } 
 
-
-
-
-
- 
-
 #overlay { 
   z-index          : 1000;
   position         : fixed;
   top              : 0;
   left             : 0;
   width            : 100%;
-  height           : 105vh; 
+  height           : 100vh; 
   background-color : rgba(0,0,0,0.95);
   text-align       : center;
   display          : none;
@@ -67,27 +61,25 @@
   max-width        : 80%;
   height           : 100vh; 
   background-color : white;
-  padding          : 10px; 
+  padding          : 10px;  
+  background-image    : url('../img/ajax-loader.gif');
+  background-position : center center; 
+  background-repeat   : no-repeat; 
 }
 
-#image, #loading {  
+#image {  
   margin     : 0px;
   max-width  : 100%;
   max-height : calc(100vh - 100px);
   width      : auto;
   height     : auto;
-} 
-
-#loading {
-  position : fixed;
-}
+}  
 
 #info {
   height     : 80px;
   width      : 100%;
   text-align : left;
-}
-
+} 
 
 
 .arrow {  
