--- a/public/css/album.css
+++ b/public/css/album.css
@@ -56,12 +56,14 @@
 }   
 
 #imageContainer {     
-  position         : relative;
-  display          : inline-block;
-  max-width        : 80%;
-  height           : 100vh; 
-  background-color : white;
-  padding          : 10px;  
+  position            : relative;
+  display             : inline-block;
+  min-width           : 100px;
+  max-width           : 80%;
+  width               : auto;
+  height              : 100vh; 
+  background-color    : white;
+  padding             : 10px;  
   background-image    : url('../img/ajax-loader.gif');
   background-position : center center; 
   background-repeat   : no-repeat; 
