--- a/public/css/album.css
+++ b/public/css/album.css
@@ -32,16 +32,18 @@
 }
 
 .thumb {
-  margin              : 0px;
-  display             : inline-block;
-  padding             : 6px;
-  cursor              : pointer;
-  vertical-align      : bottom;
-  background-origin   : content-box;
-  background-position : center center;
-  background-repeat   : no-repeat;
-  background-size     : contain;
+  display        : inline-block;
+  margin         : 0px;
+  padding        : 6px;
+  cursor         : pointer;
+  vertical-align : bottom;
+  text-align     : center;  
 } 
+
+.thumb img {
+  max-height : 100%;
+  max-width  : 100%;
+}
 
 #overlay { 
   z-index          : 1000;
