--- a/views/album.jade
+++ b/views/album.jade
@@ -26,11 +26,8 @@ block content
       a(class='fa fa-times')
  
     div(id='imageContainer') 
-      div(class='vertically-align', style='position:relative;')
-        img(id='image')
-        div(id='info')
-          p(id='index')
-          a(id='url', target='_blank')
+      div(class='vertically-align')
+        img(id='image') 
         
     div(class='arrow opacity vertically-align left', id='prev') 
       a(class='fa fa-angle-left')
