--- a/public/css/album.css
+++ b/public/css/album.css
@@ -57,11 +57,12 @@
   display          : none;
 }   
 
-#imageContainer {     
-  display             : inline-block; 
-  width               : 80%;  
-  height              : 100%; 
-  padding             : 10px;  
+#imageContainer {      
+  display   : inline-block; 
+  width     : auto;  
+  max-width : 80%;
+  height    : 100%; 
+  padding   : 10px;  
 }
 
 .centered-background {
