--- a/views/index.jade
+++ b/views/index.jade
@@ -11,9 +11,11 @@ block content
       h1 Albums
       
   div(class='container-fluid')
-    - for (var i = 0; i < albums.length; i++) { 
-      a(href='/'+albums[i]._id) #{ albums[i].albumInfo.name }
-      br
-    - }
-
- 
+    div(class='row')
+      - for (var i = 0; i < albums.length; i++) { 
+        div(class='col-sm-3')
+          div(class='thumbnail')
+            img(src=albums[i].images[0].thumb)
+            div(class='caption')
+              h3 #{ albums[i].albumInfo.name }
+      - } 
