improved fade-in effect

--- a/views/album.jade
+++ b/views/album.jade
@@ -39,7 +39,8 @@ block content
   script.
     $(function() {
       $('img.lazy').lazyload({
-        effect : 'fadeIn'
+        effect : 'fadeIn',
+        threshold : 100
       })
     });
   
