--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,8 @@ block content
       - for (var i = 0; i < albums.length; i++) { 
         div(class='col-sm-3')
           div(class='thumbnail')
-            img(src=albums[i].images[0].thumb)
-            div(class='caption')
-              h3 #{ albums[i].albumInfo.name }
+            a(href='/'+albums[i]._id)
+              img(src=albums[i].images[0].thumb)
+              div(class='caption')
+                h3 #{ albums[i].albumInfo.name }
       - } 
