--- a/views/album.jade
+++ b/views/album.jade
@@ -6,13 +6,13 @@ block title
 block content   
   link(rel='stylesheet', href='/css/album.css')
 
-  div(class='container-fluid')
+  div(class='container')
     div(class='page-header')
       h1 #{ album.albumInfo.name }
         br
         small #{ album.images.length } images
       
-  div(class='container-fluid', id='thumbsContainer')
+  div(class='container', id='thumbsContainer')
     - for (var i = 0; i < album.images.length; i++) { 
       - var image = album.images[i];
       - if (image && image.thumb) {
