--- a/views/index.jade
+++ b/views/index.jade
@@ -6,17 +6,37 @@ block title
 block content   
   link(rel='stylesheet', href='/css/album.css')
 
-  div(class='container-fluid')
+  div(class='container')
     div(class='page-header')
       h1 Albums
       
-  div(class='container-fluid')
-    div(class='row')
-      - for (var i = 0; i < albums.length; i++) { 
-        div(class='col-sm-3')
-          div(class='thumbnail')
-            a(href='/'+albums[i]._id)
-              img(src=albums[i].images[0].thumb)
-              div(class='caption')
-                h3 #{ albums[i].albumInfo.name }
-      - } 
+  div(id='albumThumbsContainer', class='container')
+    - for (var i = 0; i < albums.length; i++) { 
+      div(class='albumThumb')
+        div(class='thumbnail')
+          a(href='/'+albums[i]._id)
+            img(src=albums[i].images[0].thumb)
+            div(class='caption')
+              h3 #{ albums[i].albumInfo.name }
+    - } 
+      
+      
+  script.
+    $(window).resize(function() {
+      var width = $('#albumThumbsContainer').width(); 
+     
+      var boundingWidth;
+  
+      if      (width > 1200) boundingWidth = (100/5)+'%';
+      else if (width >  992) boundingWidth = (100/4)+'%';
+      else if (width >  768) boundingWidth = (100/3)+'%';
+      else                   boundingWidth = (100/2)+'%';
+                         
+      $('.albumThumb').each(function() {  
+        $(this).css('width', boundingWidth); 
+      });
+    });
+    
+    $(document).ready(function() {     
+      $(window).trigger('resize');
+    }); 
