--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
       
   body   
     nav(class='navbar navbar-default navbar-static-top', role='navigation')
-      div(class='container-fluid') 
+      div(class='container') 
         div(class='navbar-header') 
           a(class='navbar-brand', href='/') RCS Photography
 
