--- a/views/error.jade
+++ b/views/error.jade
@@ -4,8 +4,8 @@ block title
   title= (error || 'Error!') + ' | RCS Photography'
   
 block content 
-  div(class='container-fluid')
-    div(class='page-header page-header-background')
+  div(class='container')
+    div(class='page-header')
       h1 #{ error || 'Error!' }
         br
         small #{ message || 'An error as occurred.' }
