--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,6 +25,9 @@ html
       div(class='container') 
         div(class='navbar-header') 
           a(class='navbar-brand', href='/') RCS Photography
+        ul(class="nav navbar-nav navbar-left") 
+          li
+            a(href='/about') About
 
     div(class='fill')
       div(class='content')
