--- a/public/css/album.css
+++ b/public/css/album.css
@@ -65,6 +65,7 @@
 #imageContainer {      
   display   : inline-block; 
   width     : auto;  
+  min-width : 100px;
   max-width : 80%;
   height    : 100%; 
   padding   : 10px;  
