--- a/views/about.jade
+++ b/views/about.jade
@@ -10,15 +10,13 @@ block content
         br
         small by Raphael Corr&ecirc;a
     
-    p This is a portfolio used for showcasing my photography, one of my biggest hobbies. 
+    p This is a portfolio for showcasing my recent photography, one of my biggest hobbies.
     
     p All images are taken using a Sony DSC-RX100M2 camera, arguably the world's second (only after the M3) compact camera.
     
-    p I shoot strictly in raw format and use use CaptureOne to edit my work.
+    p I shoot strictly in manual and record only in raw format; I also use CaptureOne to edit my work.
     
-    p This website was written in Node.js and uses the Twitter Bootstrap CSS framework.
-    
-    p All photos are uploaded on Amazon S3 and served by CloudFront, the album info stored on Cloudant DBaaS, and the site hosted on IBM Bluemix.
+    p This website was written in Node.js and uses the Twitter Bootstrap CSS framework. Furthermore, all photos are uploaded on Amazon S3 and served by CloudFront, the album info is stored on Cloudant DBaaS, and the site is hosted on IBM Bluemix.
     
     p The source code can be found on 
       a(href='https://www.github.com/r-c-s/rcsphoto', target='_blank') GitHub.
