--- a/views/about.jade
+++ b/views/about.jade
@@ -12,7 +12,7 @@ block content
     
     p This is a portfolio for showcasing my recent photography, one of my biggest hobbies.
     
-    p All images are taken using a Sony DSC-RX100M2 camera, arguably the world's second (only after the M3) compact camera.
+    p All images are taken using a Sony DSC-RX100M2 camera.
     
     p I shoot strictly in manual and record only in raw format; I also use CaptureOne to edit my work.
     
