--- a/views/album.jade
+++ b/views/album.jade
@@ -4,15 +4,12 @@ block title
   title= album.albumInfo.name + ' | RCS Photography'
   
 block content   
-  link(rel='stylesheet', href='/css/album.css')
-
-  div(class='container')
-    div(class='page-header')
-      h1 #{ album.albumInfo.name }
-        br
-        small #{ album.images.length } images
+  div(class='page-header')
+    h1 #{ album.albumInfo.name }
+      br
+      small #{ album.images.length } images
       
-  div(class='container', id='thumbsContainer')
+  div(id='thumbsContainer')
     - for (var i = 0; i < album.images.length; i++) { 
       - var image = album.images[i];
       - if (image && image.thumb) {
