--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,22 +16,29 @@ html
       link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
       link(rel='stylesheet', href='/css/normalize.css') 
       link(rel='stylesheet', href='/css/style.css')
+      link(rel='stylesheet', href='/css/album.css')
         
       script(src='/js/jquery-1.11.3.min.js')
       script(src='/bootstrap/js/bootstrap.min.js')
       
   body   
-    nav(class='navbar navbar-default navbar-static-top', role='navigation')
+    nav(class='navbar navbar-default navbar-static-top', role='navigation', style='margin:0px;')
       div(class='container') 
         div(class='navbar-header') 
           a(class='navbar-brand', href='/') RCS Photography
-          ul(class="nav navbar-nav navbar-left") 
+          button(class='navbar-toggle', type='button', data-toggle='collapse', data-target='.navbar-collapse') 
+            span(class='sr-only')
+            span(class='icon-bar')
+            span(class='icon-bar')
+            span(class='icon-bar')
+            
+        div(class='navbar-collapse collapse')
+          ul(class="nav navbar-nav navbar-left")
             li
               a(href='/about') About
 
-    div(class='fill')
-      div(class='content')
-        block content
+    div(class='container')
+      block content
 
      
 
