--- a/public/css/album.css
+++ b/public/css/album.css
@@ -32,6 +32,14 @@
   display    : inline-block;
 }
 
+.albumThumbImg {
+  width  : 100%;
+  height : 100%;
+  background-position : center center; 
+  background-repeat   : no-repeat; 
+  background-size     : cover;
+}
+
 #thumbsContainer {
   
 }
