added picture to about page

--- a/views/about.jade
+++ b/views/about.jade
@@ -13,13 +13,14 @@ block content
     
   p All images are taken using a Sony DSC-RX100M2 camera.
     
-  p I shoot strictly in manual and record only in raw format; I also use CaptureOne to edit my work.
+  p I shoot mostly in manual and record only in raw format. I also use CaptureOne to edit my work.
     
-  p This website was written in Node.js and uses the Twitter Bootstrap CSS framework. Furthermore, all photos are uploaded on Amazon S3 and served by CloudFront, the album info is stored on Cloudant DBaaS, and the site is hosted on IBM Bluemix.
+  p This website was written in Node.js and uses the Twitter Bootstrap CSS framework. All photos are uploaded on Amazon S3 and served by CloudFront, the album info is stored on Cloudant DBaaS, and the site is hosted on IBM Bluemix.
     
   p The source code can be found on 
     a(href='https://www.github.com/r-c-s/rcsphoto', target='_blank') GitHub.
     
+  img(width='500' src='https://s3-us-west-2.amazonaws.com/rcsphoto/site/968_.JPG?X-Amz-Date=20170203T024535Z&X-Amz-Expires=300&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Signature=56fe283653ee4d30049a26599b3027243b7e2fbc79eddc02fb74804d56370a6d&X-Amz-Credential=ASIAITU5VHB7UQP34IEA/20170203/us-west-2/s3/aws4_request&X-Amz-SignedHeaders=Host&x-amz-security-token=FQoDYXdzEMz//////////wEaDGrWFEb%2BvTpePbmJKiL6ASmEUA1svgX9yw6jbwfTgfLQsOz1ei2pC3j4%2Bncfm/CuqB1qhbz%2BvC0Upb7WPs6c0Y0dp26kX4v/LP1WzRa92epuPgbA%2Bcg8kEZBwx2qpkfqnEoRvnBvhSDU%2BhmREEe2eL7jTbeGVO0VvL7yqJ4lzFtNm6RXawAR/%2BSXjCxMzjNmS9AT4O9kwcpn1NDjgF0NOrXzeVQ6z0hn2uCBsvrVJ6NQujbV1RInoUZ4ImqbGCYR3B0velI4K/rwHeTeqTyoTXHgf4zqDcjBGTl1blZ55onfFOrknIaVW%2BLyF/zcU/cpuBTwkcMkBg3CRgHnQaMyM7wsOdaXezgIx2coy9zPxAU%3D')
     
-        
-
+  br
+  br
