--- a/views/album.jade
+++ b/views/album.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block title
-  title= album.albumInfo.name + ' | RCS Photography'
+  title= album.name + ' | RCS Photography'
   
 block content   
   div(class='page-header')
-    h1 #{ album.albumInfo.name }
+    h1 #{ album.name }
       br
       small #{ album.images.length } images
       
