image max width

--- a/views/about.jade
+++ b/views/about.jade
@@ -20,7 +20,7 @@ block content
   p The source code can be found on 
     a(href='https://www.github.com/r-c-s/rcsphoto', target='_blank') GitHub.
     
-  img(width='500' src='http://d164y11hqgve5j.cloudfront.net/site/968_.JPG')
+  img(style='width:500px; max-width: 100%' src='http://d164y11hqgve5j.cloudfront.net/site/968_.JPG')
   
   br
   br
