--- a/views/about.jade
+++ b/views/about.jade
@@ -11,11 +11,13 @@ block content
     
   p This is a portfolio for showcasing my recent photography, one of my biggest hobbies.
     
-  p All images are taken using a Sony DSC-RX100M2 camera.
+  p All images are taken using a Sony DSC-RX100 II and V cameras.
     
-  p I shoot mostly in manual and record only in raw format. I also use CaptureOne to edit my work.
+  p I shoot mostly in manual and record in raw format. I also use CaptureOne to edit my work.
     
   p This website was written in Node.js and uses the Twitter Bootstrap CSS framework. All photos are uploaded on Amazon S3 and served by CloudFront, the album info is stored on Cloudant DBaaS, and the site is hosted on IBM Bluemix.
+    
+  p Thank you for viewing!  
     
   p The source code can be found on 
     a(href='https://www.github.com/r-c-s/rcsphoto', target='_blank') GitHub.
