--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@
     @extend .flex-column;
     justify-content: center;
     width: 100%;
-    height: 40px;
+    height: 45px;
     position: sticky;
     top: 0;
     border-bottom: 1px solid lightgray;
@@ -76,26 +76,32 @@
   }
 
   #album-list {
-    .card-container {
-      display: inline-block;
-      padding-right: 10px;
-      padding-bottom: 10px;
+    $padding-between-albums: 10px;
 
-      a {
-        color: #00849b;
-        text-decoration: none;
-      }
+    .album-thumbs-container {
+      width: calc(100% + $padding-between-albums);
 
-      .card-title {
-        @extend .flex-column;
-        justify-content: center;
-        text-align: center;
-        margin: 0;
-        height: 30px;
-      }
-  
-      .card-image-bottom {
-        max-width: 100%;
+      .card-container {
+        display: inline-block;
+        padding-right: $padding-between-albums;
+        padding-bottom: $padding-between-albums;
+
+        a {
+          color: #00849b;
+          text-decoration: none;
+        }
+
+        .card-title {
+          @extend .flex-column;
+          justify-content: center;
+          text-align: center;
+          margin: 0;
+          height: 30px;
+        }
+    
+        .card-image-bottom {
+          max-width: 100%;
+        }
       }
     }
   }
@@ -106,7 +112,7 @@
       margin: 0px;
       padding: 6px;
       text-align: center;  
-      height: 190px;
+      height: fit-content;
       
       img {
         cursor: pointer;
@@ -183,7 +189,7 @@
 
   @media only screen and (min-width: 768px) {
     .responsive-width {
-      width: 33.3%;
+      width: 33.33%;
     }
   }
 
@@ -195,7 +201,7 @@
 
   @media only screen and (min-width: 1200px) {
     .responsive-width {
-      width: 16.6%;
+      width: 16.66%;
     }
   }
 }
