--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 #rcs-photo {
 
+  .overflow-hidden {
+    overflow: hidden;
+  }
+
   @keyframes loading {
     from { background-color: #eee; }
     to { background-color: lightgray; }
@@ -162,7 +166,7 @@
     @extend .flex-row;
     justify-content: center;
     z-index: 2;
-    background-color: rgb(0, 0, 0, 0.9);
+    background-color: black;
     width: 100%;
     height: 100%;
     position: fixed;
