--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,10 @@
     overflow: hidden;
   }
 
+  .visibility-hidden {
+    visibility: hidden;
+  }
+
   @keyframes loading {
     from { background-color: #eee; }
     to { background-color: lightgray; }
@@ -173,18 +177,59 @@
     top: 0;
     left: 0;
 
-    .image-container {
-      @extend .loading-background;
+    .top-bar {
       @extend .flex-column;
       justify-content: center;
+      background-color: transparent;
+      width: 100%;
+      height: 50px;
+      position: fixed;
+      padding: 0 10px;
+
+      .close-icon-container {
+        @extend .flex-row;
+        align-items: center;
+        color: #eee;
+        cursor: pointer;
+
+        small {
+          margin-left: 5px;
+        }
+      }
+    }
+
+    .image-container {
+      @extend .loading-background;
+      @extend .flex-row;
+      justify-content: space-between;
       align-items: center;
       width: 100%;
       height: 100%;
+      padding: 10px;
+
+      .nav-icon-container {
+        @extend .flex-row;
+        justify-content: center;
+        align-items: center;
+        min-width: 40px;
+        min-height: 40px;
+        border: 1px solid #333;
+        border-radius: 50%;
+        cursor: pointer;
+
+        .nav-icon {
+          color: #eee;
+        }
+      }
+
+      .nav-icon-container:hover {
+        background-color: #333;
+      }
 
       img {
         pointer-events: none;
-        max-height: 90%;
-        max-width: 90%;
+        max-height: 100%;
+        max-width: calc(100% - 100px);
       }
     }
   }
