--- a/src/App.scss
+++ b/src/App.scss
@@ -197,6 +197,21 @@
       }
     }
 
+    .download-icon-container {
+      @extend .flex-row;
+      align-items: center;
+      color: #eee;
+      cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      text-decoration: none;
+
+      small {
+        margin-left: 5px;
+      }
+    }
+
     .image-container {
       @extend .loading-background;
       @extend .flex-row;
