--- a/src/App.scss
+++ b/src/App.scss
@@ -219,7 +219,6 @@
       align-items: center;
       width: 100%;
       height: 100%;
-      padding: 10px;
 
       .nav-icon-container {
         @extend .flex-row;
@@ -230,6 +229,7 @@
         border: 1px solid #333;
         border-radius: 50%;
         cursor: pointer;
+        margin: 0 10px;
 
         .nav-icon {
           color: #eee;
@@ -243,13 +243,29 @@
       img {
         pointer-events: none;
         max-height: 100%;
-        max-width: calc(100% - 100px);
+        max-width: calc(100% - 120px);
       }
     }
   }
 
   .item-responsive-width {
     width: 50%; // 2 per row
+  }
+
+  @media only screen and (max-width: 512px) {
+    #active-image {
+      .nav-icon-container {
+        display: none !important;
+      }
+
+      .image-container {
+        img {
+          pointer-events: none;
+          max-height: 100%;
+          max-width: 100%;
+        }
+      }
+    }
   }
 
   @media only screen and (min-width: 768px) {
