--- a/src/App.scss
+++ b/src/App.scss
@@ -197,28 +197,14 @@
     top: 0;
     left: 0;
 
-    .close-icon-container {
+    .top-icon-container {
       @extend .flex-row;
       align-items: center;
       color: #eee;
       cursor: pointer;
       position: absolute;
+      z-index: 1;
       top: 10px;
-      right: 10px;
-
-      small {
-        margin-left: 5px;
-      }
-    }
-
-    .download-icon-container {
-      @extend .flex-row;
-      align-items: center;
-      color: #eee;
-      cursor: pointer;
-      position: absolute;
-      top: 10px;
-      left: 10px;
       text-decoration: none;
 
       small {
@@ -226,39 +212,82 @@
       }
     }
 
-    .image-container {
-      @extend .loading-background;
+    .icon-right {
+      right: 10px;
+    }
+
+    .icon-left {
+      left: 10px;
+    }
+
+    .images-container {
       @extend .flex-row;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-      height: 100%;
+      position: relative;
 
-      .nav-icon-container {
+      .image-container {
+        @extend .loading-background;
         @extend .flex-row;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        min-width: 40px;
-        min-height: 40px;
-        border: 1px solid #333;
-        border-radius: 50%;
-        cursor: pointer;
-        margin: 0 10px;
-
-        .nav-icon {
-          color: #eee;
+        width: 100%;
+        height: 100%;
+  
+        .nav-icon-container {
+          @extend .flex-row;
+          justify-content: center;
+          align-items: center;
+          min-width: 40px;
+          min-height: 40px;
+          border: 1px solid #333;
+          border-radius: 50%;
+          cursor: pointer;
+          margin: 0 10px;
+  
+          .nav-icon {
+            color: #eee;
+          }
+        }
+  
+        .nav-icon-container:hover {
+          background-color: #333;
+        }
+  
+        img {
+          pointer-events: none;
+          max-height: 100%;
+          max-width: calc(100% - 120px);
         }
       }
-
-      .nav-icon-container:hover {
-        background-color: #333;
+  
+      .next {
+        position: absolute;
+        right: -100%;
       }
-
-      img {
-        pointer-events: none;
-        max-height: 100%;
-        max-width: calc(100% - 120px);
+  
+      .previous {
+        position: absolute;
+        right: 100%;
       }
+    }
+
+    @keyframes finished-next-animation {
+      from { right: 0; }
+      to { right: 100%; }
+    }
+
+    @keyframes finished-previous-animation {
+      from { right: 0; }
+      to { right: -100%; }
+    }
+
+    .finished-next {
+      animation: finished-next-animation 0.75s;
+      animation-fill-mode: forwards;
+    }
+
+    .finished-previous {
+      animation: finished-previous-animation 0.75s;
+      animation-fill-mode: forwards;
     }
   }
 
@@ -272,11 +301,13 @@
         display: none !important;
       }
 
-      .image-container {
-        img {
-          pointer-events: none;
-          max-height: 100%;
-          max-width: 100%;
+      .images-container {
+        .image-container {
+          img {
+            pointer-events: none;
+            max-height: 100%;
+            max-width: 100%;
+          }
         }
       }
     }
