--- a/src/App.scss
+++ b/src/App.scss
@@ -233,6 +233,7 @@
         align-items: center;
         width: 100%;
         height: 100%;
+        user-select: none;
   
         .nav-icon-container {
           @extend .flex-row;
