improve looks of LoadingText

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,7 @@
     @extend .loading;
     color: transparent;
     display: inline-block;
+    line-height: 1em;
   }
 
   .pointer-events-none {
